# VoiceGames

./: README.md  tic_tac_toe.c  utils.c
VoiceGame/: settings.gradle
VoiceGame/app/: build.gradle
VoiceGame/app/src/androidTest/java/ca/bcit/voicegame/: ExampleInstrumentedTest.java
VoiceGame/app/src/main/: AndroidManifest.xml
VoiceGame/app/src/main/java/ca/bcit/voicegame/: AudioChat.java  MainActivity.java  RpsActivity.java  TTTutils.java  TttActivity.java
VoiceGame/app/src/main/res/layout/: activity_main.xml  activity_ttt.xml
VoiceGame/app/src/main/res/values/: strings.xml
VoiceGame/app/src/test/java/ca/bcit/voicegame/: ExampleUnitTest.java
VoiceGame/gradle/wrapper/: gradle-wrapper.properties
gaming_prot/: gaming_prot.c
server/: CMakeLists.txt  game_server.c  game_server.h  tic_tac_toe.h  utils.c  utils.h
server/games/: fsm_symbols.h
server/games/rps/: rps.c  rps.h
server/games/ttt/: ttt.c  ttt.h  ttt_utils.c  ttt_utils.h
server/gaming_prot/: gaming_prot.c  gaming_prot.h
server/lib/: client_gateway.c  client_gateway.h  common_symbols.h  game_collection.c  game_collection.h  game_driver.c  game_driver.h  game_environment.h  handshaking.c  handshaking.h  new_client_plexer.c  new_client_plexer.h  threaded_list.c  threaded_list.h
server/lib_voice_server/: voice_server.c  voice_server.h
server/voice_chat_prot/: test_voice_echo_server.c  voice_echo_server.c  voice_prot.c  voice_prot.h
voice_chat_prot/: voice_prot.c  voice_prot.h
